--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: buildx-${{ hashFiles('Dockerfile') }}
+          key: buildx-${{ hashFiles('.devcontainer/Dockerfile') }}
           restore-keys: |
             buildx-
       - name: Build base image
