--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,21 +10,16 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Get build cache
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: buildx-${{ hashFiles('Dockerfile') }}
-          restore-keys: |
-            buildx-
       - name: Build base image
         id: docker_build_base
         uses: docker/build-push-action@v2
         with:
           context: .
           file: .devcontainer/Dockerfile
-          push: false
-          load: false
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache
+          load: true
+          tags: diy-ds-cloud/jupbook:latest
           target: base-python
+      -
+        name: Test container
+        run: |
+          docker run --rm diy-ds-cloud/jupbook:latest jupyter-book --version
