add docker build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,7 @@ jobs:
         name: Test container
         run: |
           docker run --rm diy-ds-cloud/jupbook:latest jupyter-book --version
+      -
+        name: Build book
+        run: |
+          docker run -it --rm -v ${PWD}/diy_ds_cloud_book:/home/jovyan/diy_ds_cloud_book diy-ds-cloud/jupbook:latest jupyter-book build diy_ds_cloud_book
