--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,13 @@ jobs:
           context: .
           file: .devcontainer/Dockerfile
           load: true
-          tags: diy-ds-cloud/jupbook:latest
+          tags: dddlab/base-python:latest
           target: base-python
       -
         name: Test container
         run: |
-          docker run --rm diy-ds-cloud/jupbook:latest jupyter-book --version
+          docker run --rm dddlab/base-python:latest jupyter-book --version
       -
         name: Build book
         run: |
-          docker run --rm -v ${PWD}/diy_ds_cloud_book:/home/jovyan/diy_ds_cloud_book diy-ds-cloud/jupbook:latest jupyter-book build diy_ds_cloud_book
+          docker run --rm -v ${PWD}/diy_ds_cloud_book:/home/jovyan/diy_ds_cloud_book --user root dddlab/base-python:latest jupyter-book build diy_ds_cloud_book
