--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,32 @@
 name: deploy
 
 on:
-  # Trigger the workflow on push to main branch
   push:
     branches:
       - main
 
-# This job installs dependencies, build the book, and pushes it to `gh-pages`
 jobs:
   build-and-deploy-book:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: [3.8]
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    # Install dependencies
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build image
+      uses: docker/build-push-action@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+        context: .
+        file: .devcontainer/Dockerfile
+        target: base-python
+        tags: dddlab/base-python:latest
+        load: true
+    - name: Build book
       run: |
-        pip install -r requirements.txt
-
-    # Build the book
-    - name: Build the book
-      run: |
-        jupyter-book build diy_ds_cloud_book
-
-    # Deploy the book's HTML to gh-pages branch
-    - name: GitHub Pages action
+        docker run --rm -v ${PWD}/diy_ds_cloud_book:/home/jovyan/diy_ds_cloud_book --user root dddlab/base-python:latest jupyter-book build diy_ds_cloud_book
+    - name: Copy to GitHub Pages branch
       uses: peaceiris/actions-gh-pages@v3.6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
